--- a/CPP_00/ex01/Makefile
+++ b/CPP_00/ex01/Makefile
@@ -14,6 +14,7 @@ OBJ_PATH = ./objects
 
 SRC_NAME =	Contact.cpp				\
 			Menu.cpp				\
+			PhoneBook.cpp			\
 			user_input_checks.cpp	\
 			main.cpp
 
