base makefile corrections

--- a/CPP_00/base_setup_cpp/Makefile
+++ b/CPP_00/base_setup_cpp/Makefile
@@ -26,7 +26,7 @@ $(NAME) : $(OBJS)
 
 $(OBJ_PATH)/%.o : $(SRC_PATH)/%.cpp
 	mkdir -p objects
-	$(CXX) -c $(CXXFLAGS) $(INCLUDES) $< -o $@
+	$(CXX) -c $(CXXFLAGS) $(INC) $< -o $@
 
 clean:
 	rm -rf $(OBJ_PATH)
