added Makefile with all files and a main to test

--- a/CPP_02/ex01/Makefile
+++ b/CPP_02/ex01/Makefile
@@ -1,4 +1,4 @@
-NAME = [PROGRAM NAME]
+NAME = fixed_point_01
 
 CXX = g++
 CXXFLAGS = -Wall -Werror -Wextra -g -fsanitize=address -std=c++98
@@ -12,7 +12,8 @@ SRC_PATH = ./sources
 
 OBJ_PATH = ./objects
 
-SRC_NAME =	[CPP FILES]
+SRC_NAME =	main.cpp	\
+			Fixed.cpp
 
 OBJS = $(addprefix $(OBJ_PATH)/, $(SRC_NAME:.cpp=.o))
 
