--- a/CPP_03/ex00/Makefile
+++ b/CPP_03/ex00/Makefile
@@ -1,4 +1,4 @@
-NAME = [PROGRAM NAME]
+NAME = claptrap
 
 CXX = g++
 CXXFLAGS = -Wall -Werror -Wextra -g -fsanitize=address -std=c++98
@@ -12,7 +12,8 @@ SRC_PATH = ./sources
 
 OBJ_PATH = ./objects
 
-SRC_NAME =	[CPP FILES]
+SRC_NAME =	ClapTrap.cpp	\
+			main.cpp
 
 OBJS = $(addprefix $(OBJ_PATH)/, $(SRC_NAME:.cpp=.o))
 
