--- a/CPP_03/ex01/Makefile
+++ b/CPP_03/ex01/Makefile
@@ -13,6 +13,7 @@ SRC_PATH = ./sources
 OBJ_PATH = ./objects
 
 SRC_NAME =	ClapTrap.cpp	\
+			ScavTrap.cpp	\
 			main.cpp
 
 OBJS = $(addprefix $(OBJ_PATH)/, $(SRC_NAME:.cpp=.o))
