removed main.hpp and changed main.cpp and Makefile

--- a/CPP_04/ex01/Makefile
+++ b/CPP_04/ex01/Makefile
@@ -1,4 +1,4 @@
-NAME = [PROGRAM NAME]
+NAME = brain
 
 CXX = g++
 CXXFLAGS = -Wall -Werror -Wextra -g -fsanitize=address -std=c++98
@@ -12,7 +12,12 @@ SRC_PATH = ./sources
 
 OBJ_PATH = ./objects
 
-SRC_NAME =	[CPP FILES]
+SRC_NAME =	Animal.cpp		\
+			Cat.cpp			\
+			Dog.cpp			\
+			WrongCat.cpp	\
+			Brain.cpp		\
+			main.cpp
 
 OBJS = $(addprefix $(OBJ_PATH)/, $(SRC_NAME:.cpp=.o))
 
