--- a/CPP_09/ex02/Makefile
+++ b/CPP_09/ex02/Makefile
@@ -4,7 +4,7 @@ CXX = c++
 CXXFLAGS = -Wall -Werror -Wextra -g -fsanitize=address -std=c++98
 RM = rm -f
 
-#$(VERBOSE).SILENT:
+$(VERBOSE).SILENT:
 
 INC = -I ./includes
 
